--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
 		<version>2.3.2.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.mvc</groupId>
-	<artifactId>SpringMVC</artifactId>
+	<groupId>com.hs</groupId>
+	<artifactId>HyderabadiStore</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Spring-MVC-App</name>
-	<description>Demo project for Spring Boot</description>
+	<name>Hyderabadi-Store</name>
+	<description>Hyderabadi-Store</description>
 
 	<properties>
 		<java.version>1.8</java.version>
